bug: fix gui errors and comment out tournament bugs